...
                    children: <Widget>[
                      Text(
                        'Enter your email and unique username below',
                        style: TextStyle(fontSize: 14),
                      ),
                      TextFormField(
                        key: Key('LoginEmail'),
                        validator: EmailFieldValidator.validate,
                        controller: _emailControllerLogin,
                        decoration: InputDecoration(hintText: 'Enter email'),
                      ),
                      TextFormField(
                        key: Key('LoginUsername'),
                        validator: UsernameFieldValidator.validate,
                        controller: _usernameControllerLogin,
                        decoration: InputDecoration(
                            hintText: 'Enter username',
                            helperText: '(Do not share with anyone)'),
                      ),
                      GestureDetector(
                        key: Key('LoginButton'),
                        onTap: () async {
                          await doLogin();
                        },
                        child: Padding(
                          padding: const EdgeInsets.only(top: 8.0),
                          child: Container(
...
                    children: <Widget>[
                      Text(
                        'Welcome! Enter your name, email and preferred username for entry',
                        style: TextStyle(fontSize: 14),
                      ),
                      TextFormField(
                        key: Key('RegName'),
                        controller: _nameController,
                        decoration: InputDecoration(
                          hintText: 'Enter name',
                        ),
                        validator: UsernameFieldValidator.validate,
                      ),
                      TextFormField(
                        key: Key('RegEmail'),
                        controller: _emailController,
                        enabled: !_isCodeSent,
                        decoration: InputDecoration(hintText: 'Enter email'),
                        validator: EmailFieldValidator.validate,
                      ),
                      TextFormField(
                        key: Key('RegUsername'),
                        controller: _usernameController,
                        enabled: !_isCodeSent,
                        decoration: InputDecoration(
                            hintText: 'Enter username',
                            helperText: '(Do not share with anyone)'),
                        validator: UsernameFieldValidator.validate,
                      ),
                      GestureDetector(
                        key: Key('CreateUserButton'),
                        onTap: () async {
                          await _sendCode();
                        },
                        child: Padding(
                          padding: const EdgeInsets.only(top: 8.0),
                          child: Container(
...
                              child: Column(
                                children: <Widget>[
                                  Form(
                                    autovalidate: true,
                                    key: _codeForm,
                                    child: TextFormField(
                                      key: Key('RegCode'),
                                      maxLength: 6,
                                      validator: CodeFieldValidator.validate,
                                      controller: _codeController,
                                      keyboardType: TextInputType.number,
                                      inputFormatters: [
                                        WhitelistingTextInputFormatter
...
                                      ],
                                      decoration: InputDecoration(
                                          hintText: 'Enter code here'),
                                    ),
                                  ),
                                  GestureDetector(
                                    key: Key('RegisterButton'),
                                    onTap: () async {
                                      await _verifyCodeAndRegister();
                                      // _tabController.animateTo(0);
                                    },
                                    child: Padding(
                                      padding: const EdgeInsets.only(top: 8.0),
...
