...
          backgroundColor: Colors.transparent,
          drawer: _drawerBody(),
          appBar: AppBar(
            leading: Builder(
              builder: (BuildContext context) {
                return IconButton(
                  key: Key('DrawerIcon'),
                  icon: Image.asset('assets/menu.png',
                      color: ThemeConstants.primaryColorLight),
                  onPressed: () {
                    Scaffold.of(context).openDrawer();
                  },
                  tooltip:
...
              },
            ),
            title: Text('User\'s Quarantine Diary',
                style: TextStyle(color: ThemeConstants.primaryColorLight)),
            actions: <Widget>[
              IconButton(
                  tooltip: 'Logout',
                  onPressed: () {
                    _logout();
                  },
                  icon: Icon(Icons.power_settings_new,
                      color: ThemeConstants.primaryColorLight))
            ],
...
        actions: <Widget>[
          new FlatButton(
              key: Key('Logout_No'),
              onPressed: () => Navigator.pop(context),
              child: new Text("No")),
          new FlatButton(
              key: Key('Logout_Yes'),
              onPressed: () async {
                cache.loggedIn = false;
                // secureStorage.deleteAll();
                Navigator.of(context).pushAndRemoveUntil(
                    MaterialPageRoute(
                      builder: (context) => LoginPage(),
...
                      );
                    },
                    leading: Image.asset('assets/globe.png',
                        height: 30,
                        width: 30,
                        color: ThemeConstants.primaryColorLight),
                    title: Text("COUNTRY WISE STATS",
                        style: TextStyle(
                            fontSize: 20,
                            color: ThemeConstants.primaryColorLight))),
                ListTile(
                    onTap: () {
                      Navigator.pop(context);
...
                          builder: (context) => SuggestionsPage(),
                        ),
                      );
                    },
                    leading: Icon(Icons.message,
                        color: ThemeConstants.primaryColorLight),
                    title: Text("SUGGESTIONS",
                        style: TextStyle(
                            fontSize: 20,
                            color: ThemeConstants.primaryColorLight))),
              ],
            ),
            Padding(
...
