...
        Icons.check_circle,
        color: Colors.green,
        size: 80.0,
      ),
      actions: <Widget>[
        FlatButton(
            key: Key('OKButton'),
            onPressed: () {
              Navigator.pop(context);
              // Navigator.pop(context);
            },
            child: new Text('OK'))
      ],
...
